log/build_2024-11-21_12-04-12/mypkg/stderr.log
  File "/home/aoki/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 9
    def cb(msg):
    ^
SyntaxError: invalid syntax

